# esp32_iotivity-lite

./: .gitignore  README.md
components/iotivity/: CMakeLists.txt  README.md
components/iotivity/adapter/include/: config.h  debug_print.h
components/iotivity/adapter/src/: clock.c  ipadapter.c
components/iotivity/iotivity-constrained/port/windows/: IoTivity-Constrained.vcxproj  IoTivity-Constrained.vcxproj.filters  SimpleClient.vcxproj  SimpleServer.vcxproj
examples/: CMakeLists.txt  run-log.txt  sdkconfig
examples/main/: CMakeLists.txt  light_bulb_main.c  lightbulb.c  server_freertos.c
